--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('predictor') }}">Predictor</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('careers') }}">Careers</a>
+                    </li>
                 </ul>
             </div>
         </div>
